Adding config for secondary prompt in shell.

--- a/.config/oh-my-posh/custom.toml
+++ b/.config/oh-my-posh/custom.toml
@@ -8,6 +8,11 @@ final_space = true
   foreground = 'red'
   template = '❱ '
 
+[secondary_prompt]
+  background = 'transparent'
+  foreground = 'red'
+  template = '<lightYellow>╰─</>❱ '
+
 [[blocks]]
   type = 'prompt'
   alignment = 'left'
