More tweaks to shell prompt.

--- a/.config/oh-my-posh/custom.toml
+++ b/.config/oh-my-posh/custom.toml
@@ -22,13 +22,13 @@ final_space = true
     type = 'session'
     style = 'plain'
     foreground = 'lightYellow'
-    template = '╭──  {{ .UserName }} '
+    template = '╭─ {{ .UserName }}'
 
   [[blocks.segments]]
     type = 'path'
     style = 'plain'
     foreground = 'lightYellow'
-    template = '──  {{ .PWD }} '
+    template = '── {{ .PWD }}'
 
     [blocks.segments.properties]
       style = 'folder'
@@ -37,15 +37,15 @@ final_space = true
     type = 'git'
     style = 'plain'
     foreground = 'lightYellow'
-    template = '── {{ .HEAD }}{{if .BranchStatus }} {{ .BranchStatus }}{{ end }}{{ if .Working.Changed }} \uF044 {{ .Working.String }}{{ end }}{{ if and (.Staging.Changed) (.Working.Changed) }} |{{ end }}{{ if .Staging.Changed }} \uF046 {{ .Staging.String }}{{ end }} '
+    template = '── {{ .HEAD }}{{if .BranchStatus }} {{ .BranchStatus }}{{ end }}{{ if .Working.Changed }} \uF044 {{ .Working.String }}{{ end }}{{ if and (.Staging.Changed) (.Working.Changed) }} |{{ end }}{{ if .Staging.Changed }} \uF046 {{ .Staging.String }}{{ end }}'
 
     [blocks.segments.properties]
-      branch_icon = ' '
+      branch_icon = ''
 
   [[blocks.segments]]
     type = 'status'
     foreground = 'magenta'
-    template = '──  {{ reason .Code }} '
+    template = '── {{ reason .Code }}'
 
 [[blocks]]
   type = 'prompt'
@@ -64,6 +64,6 @@ final_space = true
 
   [[blocks.segments]]
     type = 'text'
-    foreground = 'red'
-    template = '<lightYellow>╰──</><green>❱</><lightRed>❱</>❱'
+    foreground = 'lightYellow'
+    template = '╰─</><green>❱</><lightRed>❱</><red>❱</>'
 
